k8-configs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: welcome-app-service
spec:
  selector:
    app: welcome-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
