k8-configs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: welcome-app-ingress
  annotations:
    cert-manager.io/cluster-issuer: namespaxe-issuer # namespaxe offers a free TLS certificate change this to your issuer if you have one
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - my-subdomain.ns.namespaxe.com # Change this to your subdomain
      secretName: welcome-app-tls
  rules:
    - host: my-subdomain.ns.namespaxe.com # Change this to your subdomain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: welcome-app-service
                port:
                  number: 80
